<resources>
    <string name="app_name">ToDo</string>
    <string name="task">Task</string>
    <string name="add">Add</string>
    <string name="setting">Setting</string>
    <string name="emial">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_sam">Hello Sam</string>
    <string name="_2_task_for_today">2 Task for Today</string>
    <string name="sun_sept_14_2020">Sun, Sept 14 2020</string>
    <string name="task_list">Task List</string>
    <string name="_09_00">09.00</string>
    <string name="daily_stand_up">Daily Stand Up</string>
    <string name="_09_00_09_30">09.00 - 09.30</string>
    <string name="complete">Complete</string>


</resources>