<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.MainActivity">

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emial"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        app:layout_constraintLeft_toLeftOf="@id/edEmail"
        app:layout_constraintRight_toRightOf="@id/edEmail"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnGmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintLeft_toLeftOf="@id/btnLogin"
        app:layout_constraintRight_toRightOf="@id/btnLogin"/>



</androidx.constraintlayout.widget.ConstraintLayout>