<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_09_00"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@id/txtClock"
        app:layout_constraintTop_toTopOf="@id/txtClock"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_stand_up"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/txtClock2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/_09_00_09_30"
                android:textColor="@android:color/holo_blue_bright"
                app:layout_constraintTop_toBottomOf="@id/txtTask"
                app:layout_constraintLeft_toLeftOf="@id/txtTask"/>

            <ImageView
                android:id="@+id/imgMore"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintLeft_toRightOf="@id/txtTask"
                app:layout_constraintTop_toTopOf="@id/txtTask"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/holo_red_light"
        app:layout_constraintLeft_toRightOf="@id/cvList"
        app:layout_constraintTop_toTopOf="@id/cvList"
        android:layout_marginStart="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgCheck"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_check_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textColor="@android:color/white"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imgCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>