<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DashboardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccount"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardBackgroundColor="@android:color/holo_blue_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_baseline_broken_image_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/hello_sam"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@id/imgPhoto"
                app:layout_constraintTop_toTopOf="@id/imgPhoto" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/_2_task_for_today"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtName"
                app:layout_constraintLeft_toLeftOf="@id/txtName"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtHari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun_sept_14_2020"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/cvAccount"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <CalendarView
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/cvAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/TaskList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/Date"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/layout_task"
        app:layout_constraintTop_toBottomOf="@id/TaskList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>